0032122: Samples - handle WASD keys in WebGL sample